--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       position:relative;
       min-height:100svh;
       display:grid;
-      place-items:center;       /* centraliza o bloco .stack no viewport */
+      place-items:center;       /* centraliza o card no viewport */
       padding:clamp(16px,4vw,32px);
       overflow:hidden;
     }
@@ -82,19 +82,10 @@
     }
     .bg-photo{ background-size:contain; }
 
-    /* ===== Empilhador: card + acrônimo (um abaixo do outro) ===== */
-    .stack{
-      position:relative;
-      z-index:2;                 /* acima do fundo */
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:16px;                  /* espaço entre card e acrônimo */
-      width:100%;
-    }
-
-    /* ===== CARD (blur cinza) ===== */
+    /* ===== CARD (agora inclui o acrônimo) ===== */
     .card{
+      position:relative;
+      z-index:2;
       width:min(600px,94vw);
       background:rgba(0,0,0,.55);
       color:#fff;
@@ -169,21 +160,20 @@
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:16px; cursor:pointer }
 
-    /* ===== Acrônimo IMEDIATAMENTE abaixo do card, sem fundo ===== */
+    /* ===== Acrônimo DENTRO do card (sem fundo próprio) ===== */
     #acronymFull{
-      width:min(860px,92vw);
-      margin:0;                 /* sem margens externas */
-      padding:0;                /* sem “faixa” cinza */
-      background:transparent;   /* sem fundo */
+      width:100%;
+      margin:12px 0 0 0;       /* espaço acima; nada abaixo */
+      padding:0;               /* sem faixa cinza extra */
+      background:transparent;
       border-radius:0;
       font-size:clamp(15px,1.8vw,19px);
       line-height:1.6;
       text-align:left;
       color:#fff;
-      text-shadow:0 1px 2px rgba(0,0,0,.4); /* legibilidade sobre a foto */
+      text-shadow:0 1px 2px rgba(0,0,0,.25);
       transition:height 180ms ease;
       overflow:hidden;
-      z-index:2;
     }
     #acronymFull .row{ display:flex; align-items:center; gap:10px; margin:2px 0; }
     #acronymFull .letter{
@@ -238,25 +228,23 @@
       <div class="bg-photo" style="background-image: var(--hero);"></div>
     </div>
 
-    <!-- Bloco central: CARD + ACRÔNIMO -->
-    <div class="stack">
-      <div class="card">
-        <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
-        <p id="textoDigitado" class="typing"></p>
+    <!-- CARD centralizado que agora engloba o acrônimo -->
+    <div class="card">
+      <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
+      <p id="textoDigitado" class="typing"></p>
 
-        <div class="button-container">
-          <button id="whyBtn" class="btn why attn" aria-label="Descubra por que eu quero uma chance" onclick="abrirPagina()">
-            Por que eu quero uma chance? 🤔
-          </button>
-        </div>
-
-        <div class="button-container">
-          <button class="btn yes" onclick="aceitou()">Tenho chance! <span class="emo" role="img" aria-label="rosto apaixonado">🥰</span></button>
-          <button class="btn no"  onclick="mostrarMensagemNao()">Não tenho chance! <span class="emo" role="img" aria-label="triste">🙁</span></button>
-        </div>
+      <div class="button-container">
+        <button id="whyBtn" class="btn why attn" aria-label="Descubra por que eu quero uma chance" onclick="abrirPagina()">
+          Por que eu quero uma chance? 🤔
+        </button>
       </div>
 
-      <!-- Acrônimo imediatamente abaixo do card -->
+      <div class="button-container">
+        <button class="btn yes" onclick="aceitou()">Tenho chance! <span class="emo" role="img" aria-label="rosto apaixonado">🥰</span></button>
+        <button class="btn no"  onclick="mostrarMensagemNao()">Não tenho chance! <span class="emo" role="img" aria-label="triste">🙁</span></button>
+      </div>
+
+      <!-- Acrônimo agora DENTRO do card -->
       <section id="acronymFull" aria-live="polite" aria-atomic="true"></section>
     </div>
   </div>
@@ -274,7 +262,7 @@
   <!-- Áudios -->
   <audio id="bgm" preload="auto" playsinline><source src="kennyg.mp3" type="audio/mpeg"></source></audio>
   <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></source></audio>
-  <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></source></audio>
+  <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></audio>
 
   <!-- ====== JS original (mantido) ====== -->
   <script>
