--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
     body{
       margin:0;
       min-height:100svh;
-      background:#000;
-      text-align:center;
+      background:#000;                     /* fica por trás do blur */
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
+      text-align:center;
     }
 
-    /* Palco + imagem (duas camadas) */
+    /* Palco com fundo em 2 camadas e centragem absoluta do card */
     .stage{
       position:relative;
       min-height:100svh;
       display:grid;
-      place-items:center;       /* centraliza o card no viewport */
+      place-items:center;                  /* centraliza o card no viewport */
       padding:clamp(16px,4vw,32px);
-      overflow:hidden;
+      overflow:hidden;                     /* corta o excesso do blur */
     }
     .bg{ position:absolute; inset:0; z-index:0; pointer-events:none; }
     .bg-fill, .bg-photo{ position:absolute; inset:0; background-position:center; background-repeat:no-repeat; }
@@ -82,45 +82,60 @@
     }
     .bg-photo{ background-size:contain; }
 
-    /* ===== CARD (agora inclui o acrônimo) ===== */
+    /* ===== CARD (engloba tudo e fica centralizado) ===== */
     .card{
-      position:relative;
-      z-index:2;
-      width:min(600px,94vw);
+      position:relative; z-index:2;
+      width:min(900px,96vw);               /* igual ao feel da "pagina" */
+      max-height:92svh;                    /* não passa da tela */
+      overflow:auto;                       /* rola por dentro se precisar */
       background:rgba(0,0,0,.55);
       color:#fff;
-      padding:clamp(16px,4vw,32px);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap: clamp(12px, 2.8vw, 16px);
+      padding:clamp(16px,4vw,28px);
       border-radius:20px;
       text-align:center;
       backdrop-filter:blur(2px);
       box-shadow:0 10px 30px rgba(0,0,0,.25);
     }
+
     h1.title{
-      margin:0 0 18px;
+      margin:0;
       font-size:clamp(1.8rem,5vw,2.6rem);
-      font-weight:700;
+      font-weight:800;
       line-height:1.15;
       text-shadow:0 1px 2px rgba(0,0,0,.55);
     }
     .title-emoji{ display:inline-block; transition:opacity .26s ease; }
 
+    /* Bloco de texto com largura confortável, centralizado dentro do card */
     .typing{
       font-size:clamp(1rem,4.2vw,1.3rem);
       line-height:1.6;
+      color:#fff;
+      text-align:left;
+      max-width:min(760px,92vw);
+      margin:0 auto;
       border-right:2px solid rgba(255,255,255,.9);
       animation:blink-caret .75s step-end infinite;
       white-space:pre-wrap;
       overflow-wrap:anywhere;
-      margin:0 auto 14px;
       text-shadow:0 1px 2px rgba(0,0,0,.55);
     }
     @keyframes blink-caret{ 50%{ border-color:transparent } }
+
     @media (min-width:1200px){
       h1.title{ font-size:48px; }
       .typing{ font-size:24px; }
     }
 
-    .button-container{ display:flex; gap:20px; flex-wrap:wrap; justify-content:center; margin-top:14px; }
+    .button-container{
+      width:100%;
+      max-width:min(760px,92vw);
+      display:flex; gap:20px; flex-wrap:wrap; justify-content:center; margin-top:6px;
+    }
     .btn{
       padding:clamp(12px,3.5vw,18px) clamp(20px,5vw,32px);
       font-size:clamp(1rem,3.8vw,1.125rem);
@@ -160,11 +175,12 @@
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:16px; cursor:pointer }
 
-    /* ===== Acrônimo DENTRO do card (sem fundo próprio) ===== */
+    /* ===== Acrônimo DENTRO do card, centralizado e sem fundo próprio ===== */
     #acronymFull{
       width:100%;
-      margin:12px 0 0 0;       /* espaço acima; nada abaixo */
-      padding:0;               /* sem faixa cinza extra */
+      max-width:min(760px,92vw);           /* mesma largura confortável do texto */
+      margin:12px auto 0;
+      padding:0;
       background:transparent;
       border-radius:0;
       font-size:clamp(15px,1.8vw,19px);
@@ -231,6 +247,7 @@
     <!-- CARD centralizado que agora engloba o acrônimo -->
     <div class="card">
       <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
+
       <p id="textoDigitado" class="typing"></p>
 
       <div class="button-container">
@@ -244,7 +261,7 @@
         <button class="btn no"  onclick="mostrarMensagemNao()">Não tenho chance! <span class="emo" role="img" aria-label="triste">🙁</span></button>
       </div>
 
-      <!-- Acrônimo agora DENTRO do card -->
+      <!-- Acrônimo dentro do card, centralizado -->
       <section id="acronymFull" aria-live="polite" aria-atomic="true"></section>
     </div>
   </div>
@@ -264,8 +281,8 @@
   <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></source></audio>
   <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></audio>
 
-  <!-- ====== JS original (mantido) ====== -->
   <script>
+    /* ===== Música de fundo ===== */
     const AUTOPLAY_DELAY_MS = 3000;
     let bgmStarted = false;
 
@@ -283,6 +300,7 @@
       window.addEventListener('pageshow', startBGM);
     }
 
+    /* Sad song no modal */
     function playSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; sad.loop = true; sad.volume = 0.5; try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){} }
     function stopSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; try { sad.pause(); } catch(e){} sad.currentTime = 0; sad.loop = false; }
 
@@ -321,6 +339,7 @@ E, acima de tudo, espero que isso não interfira na nossa amizade, que é algo q
       playBGMNow();
     }
 
+    /* ===== Texto digitando / cabeçalho ===== */
     const texto =
 `Acho que tô precisando de terapia… ando com uns sintomas meio suspeitos: coração acelerado, sorriso bobo e uma vontade de te ver todo dia.
 Sinceramente? Tô começando a desconfiar que o diagnóstico é você.
@@ -338,9 +357,11 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       setTimeout(()=>{ span.style.opacity='0'; setTimeout(()=>{ span.textContent=c; span.style.opacity='1'; index++; setTimeout(digitarSequencial,nextDelayFor(c)); },FADE_DURATION); },REVEAL_DELAY);
     }
 
+    /* Emoji do título */
     const emojiList=["🤩","🥰","😍","💖"], emojiEl=document.getElementById("emojiCycler"); let emojiIndex=0;
     function cycleEmoji(){ emojiEl.style.opacity='0'; setTimeout(()=>{ emojiIndex=(emojiIndex+1)%emojiList.length; emojiEl.textContent=emojiList[emojiIndex]; emojiEl.style.opacity='1'; },260); }
 
+    /* ===== Acrônimos ===== */
     const ACRONYM_BLOCK = `
 ---ACRONIMOS_POR_LETRA---
 [M]
@@ -461,6 +482,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const full=document.getElementById('acronymFull'); if(!full) return;
       const wrapper=buildWrapper(lines);
 
+      /* medir nova altura */
       const meas=full.cloneNode(false);
       meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;';
       meas.style.width=full.clientWidth+'px';
