--- a/index.html
+++ b/index.html
@@ -237,4 +237,323 @@
 
     .fx-rise.in{ animation:row-in 420ms var(--d,0ms) cubic-bezier(.2,.8,.2,1) both; }
     .fx-rise.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
-    @keyframes ro
+    @keyframes row-in{from{opacity:0;transform:translateY(8px) scale(.98);filter:blur(3px)}
+      to{opacity:1;transform:translateY(0) scale(1);filter:blur(0)}}
+    @keyframes row-out{from{opacity:1;transform:translateY(0)}
+      to{opacity:0;transform:translateY(-6px);filter:blur(3px)}}
+
+    .fx-wipe .text{ will-change:clip-path,transform,opacity; }
+    .fx-wipe.in .text{ animation:wipe-in 520ms calc(var(--d,0ms) + 120ms) cubic-bezier(.22,.7,.16,1) both; }
+    .fx-wipe.out .text{ animation:row-out 300ms var(--d,0ms) ease-in both; }
+    .fx-wipe.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
+
+    .fx-flip .text{ transform-origin:left center; will-change:transform,opacity; }
+    .fx-flip.in  .text{ animation:flip-in 520ms calc(var(--d,0ms) + 90ms) cubic-bezier(.2,.8,.2,1) both; }
+    .fx-flip.out .text{ animation:row-out 300ms var(--d,0ms) ease-in both; }
+    .fx-flip.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
+    @keyframes flip-in{from{transform:rotateX(-75deg);opacity:0;filter:blur(2px)}
+      to{transform:rotateX(0);opacity:1;filter:blur(0)}}
+  </style>
+</head>
+<body>
+  <!-- Troque a imagem aqui -->
+  <div class="stage" style="--hero: url('IMG_20250823_124847408.jpg')">
+    <!-- Fundo -->
+    <div class="bg" aria-hidden="true">
+      <div class="bg-fill"  style="background-image: var(--hero);"></div>
+      <div class="bg-photo" style="background-image: var(--hero);"></div>
+    </div>
+
+    <!-- CARD centralizado que agora engloba o acrônimo -->
+    <div class="card">
+      <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
+
+      <p id="textoDigitado" class="typing"></p>
+
+      <div class="button-container">
+        <button id="whyBtn" class="btn why attn" aria-label="Descubra por que eu quero uma chance" onclick="abrirPagina()">
+          Por que eu quero uma chance? 🤔
+        </button>
+      </div>
+
+      <div class="button-container">
+        <button class="btn yes" onclick="aceitou()">Tenho chance! <span class="emo" role="img" aria-label="rosto apaixonado">🥰</span></button>
+        <button class="btn no"  onclick="mostrarMensagemNao()">Não tenho chance! <span class="emo" role="img" aria-label="triste">🙁</span></button>
+      </div>
+
+      <!-- Acrônimo dentro do card, centralizado -->
+      <section id="acronymFull" aria-live="polite" aria-atomic="true"></section>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="dialog-overlay" id="dialogo" role="dialog" aria-modal="true" aria-labelledby="dialogMsg">
+    <div class="dialog-box">
+      <p id="dialogMsg"></p>
+      <div class="dialog-buttons">
+        <button class="yes" onclick="fecharDialogo()">Fechar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Áudios -->
+  <audio id="bgm" preload="auto" playsinline><source src="kennyg.mp3" type="audio/mpeg"></source></audio>
+  <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></source></audio>
+  <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></audio>
+
+  <script>
+    /* ===== Música de fundo ===== */
+    const AUTOPLAY_DELAY_MS = 3000;
+    let bgmStarted = false;
+
+    async function startBGM() {
+      const a = document.getElementById('bgm');
+      if (!a) return false;
+      try { a.volume = 0.6; await a.play(); bgmStarted = true; return true; } catch(e) { return false; }
+    }
+    function playBGMNow(){ const a = document.getElementById('bgm'); if (!a) return; a.volume = 0.6; a.play().catch(()=>{}); bgmStarted = true; }
+    function pauseBGM(){ const a = document.getElementById('bgm'); if (a && !a.paused) a.pause(); }
+    function setupAutoplay() {
+      setTimeout(startBGM, AUTOPLAY_DELAY_MS);
+      document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState === 'visible') startBGM(); });
+      requestAnimationFrame(startBGM);
+      window.addEventListener('pageshow', startBGM);
+    }
+
+    /* Sad song no modal */
+    function playSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; sad.loop = true; sad.volume = 0.5; try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){} }
+    function stopSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; try { sad.pause(); } catch(e){} sad.currentTime = 0; sad.loop = false; }
+
+    async function playFromElementOrNew(id, src, volume=0.5){
+      const el=document.getElementById(id);
+      const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}};
+      if(el && await tryP(el)) return true;
+      const dyn=new Audio(src); dyn.preload='auto'; dyn.volume=volume;
+      return await tryP(dyn);
+    }
+
+    async function aceitou(){
+      pauseBGM(); stopSadLoop();
+      await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
+      const msg = encodeURIComponent('Você tem chance Matheusão !!🤩💚');
+      setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
+    }
+
+    function abrirPagina(){ pauseBGM(); stopSadLoop(); window.location.href="pagina.html"; }
+
+    function mostrarMensagemNao(){
+      pauseBGM();
+      playSadLoop();
+      const overlay = document.getElementById('dialogo');
+      const boxText = document.getElementById('dialogMsg');
+      const mensagem = `Espero, de coração, que isso tenha sido recebido de forma leve, com respeito e carinho.
+Continuo aqui, no seu tempo, se e quando fizer sentido pra você.
+
+E, acima de tudo, espero que isso não interfira na nossa amizade, que é algo que eu realmente valorizo muito.`;
+      boxText.textContent = mensagem;
+      overlay.style.display = 'flex';
+    }
+    function fecharDialogo(){
+      document.getElementById('dialogo').style.display='none';
+      stopSadLoop();
+      playBGMNow();
+    }
+
+    /* ===== Texto digitando / cabeçalho ===== */
+    const texto =
+`Acho que tô precisando de terapia… ando com uns sintomas meio suspeitos: coração acelerado, sorriso bobo e uma vontade de te ver todo dia.
+Sinceramente? Tô começando a desconfiar que o diagnóstico é você.
+Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
+    const destino=document.getElementById("textoDigitado"); let index=0;
+    const BASE_INTERVAL=18, COMMA_PAUSE=27, SENTENCE_PAUSE=56, REVEAL_DELAY=133, FADE_DURATION=40;
+    function nextDelayFor(c){ if(c===','||c===';') return BASE_INTERVAL+COMMA_PAUSE; if('.!?…'.includes(c)) return BASE_INTERVAL+SENTENCE_PAUSE; return BASE_INTERVAL; }
+    function digitarSequencial(){
+      if(index>=texto.length){ destino.style.borderRight='none'; return; }
+      const c=texto.charAt(index);
+      if(c===' '){ destino.append(' '); index++; return setTimeout(digitarSequencial,BASE_INTERVAL); }
+      if(c==='\n'){ destino.appendChild(document.createElement('br')); index++; return setTimeout(digitarSequencial,BASE_INTERVAL+SENTENCE_PAUSE); }
+      const span=document.createElement('span'); span.textContent='❤️'; span.style.display='inline'; span.style.opacity='1';
+      span.style.transition=`opacity ${FADE_DURATION}ms ease`; destino.appendChild(span);
+      setTimeout(()=>{ span.style.opacity='0'; setTimeout(()=>{ span.textContent=c; span.style.opacity='1'; index++; setTimeout(digitarSequencial,nextDelayFor(c)); },FADE_DURATION); },REVEAL_DELAY);
+    }
+
+    /* Emoji do título */
+    const emojiList=["🤩","🥰","😍","💖"], emojiEl=document.getElementById("emojiCycler"); let emojiIndex=0;
+    function cycleEmoji(){ emojiEl.style.opacity='0'; setTimeout(()=>{ emojiIndex=(emojiIndex+1)%emojiList.length; emojiEl.textContent=emojiList[emojiIndex]; emojiEl.style.opacity='1'; },260); }
+
+    /* ===== Acrônimos ===== */
+    const ACRONYM_BLOCK = `
+---ACRONIMOS_POR_LETRA---
+[M]
+- Meu motivo de sorrir
+- Minha palmeirense preferida
+- Melodia suave da vida
+- Minha camisa 10
+- Modelo único
+- Motivada e focada
+- Meu melhor lugar no mundo
+- Meu mundo fica melhor com você
+- Meu sorriso preferido mora em você
+- Minha dose diária de dopamina
+- Maravilhosa
+
+[A]
+- Amor em cada gesto
+- A única terapia que eu quero é estar ao seu lado
+- Análise nenhuma explica o que sinto por você
+- Alegria que contagia
+- A única que quero ao meu lado
+- Adora dar bronca (rs)
+- Apaixonante
+- Atrapalha meu coração (faz ele errar as batidas rs)
+- Alma linda que encanta
+- Autêntica em cada gesto
+- Amo seus surtinhos (fofos)
+- Abrigo contra qualquer tempestade
+- Amiga
+- Admirável
+- Amo
+- A referência que eu admiro
+- Amanhecer mais bonito ao seu lado
+- Amor que nenhum teste de Rorschach disfarça
+
+[R]
+- Razão das minhas melhores inspirações
+- Referência nos meus sonhos (até o Jung concordaria)
+- Risada fofa
+- Rara e preciosa
+- Responsável e brilhante
+- Respiro aliviado quando te vejo
+- Romance que eu quero viver
+- Rosto que ilumina meus dias
+
+[I]
+- Ilumina qualquer ambiente
+- Insight mais lindo da minha vida
+- Incrivelmente gente boa
+- Irrepreensível no caráter
+- Impossível não te notar
+- Incomparável na essência
+- Inteligência que encanta
+- Imensa no coração
+- Inesquecível
+
+[N]
+- Ninguém se compara a você
+- Nem Freud explica minha atração por você
+- Nunca perde o charme
+- Na medida exata do meu sonho
+- Notável por onde passa
+- Nocaute no meu coração
+- Nível máximo de encanto
+- Nunca te trocaria por nada
+- Nos meus planos, sempre você
+---FIM---
+`;
+    function parseGroup(block, letter){
+      const re=new RegExp(`\\[${letter}\\]([\\s\\S]*?)(?=\\n\\[|---FIM---)`,'m');
+      const m=block.match(re); if(!m) return [];
+      return m[1].split('\n').map(l=>l.replace(/^\s*-\s*/,'').trim()).filter(Boolean);
+    }
+    const GROUPS={ M:parseGroup(ACRONYM_BLOCK,'M'), A:parseGroup(ACRONYM_BLOCK,'A'), R:parseGroup(ACRONYM_BLOCK,'R'), I:parseGroup(ACRONYM_BLOCK,'I'), N:parseGroup(ACRONYM_BLOCK,'N') };
+    function pickOne(arr,avoid){ const pool=arr.filter(x=>x!==avoid); return pool.length?pool[Math.floor(Math.random()*pool.length)]:(arr[0]||''); }
+    function pickDistinctA(aArr,used,avoid){ const pool=aArr.filter(x=>!used.has(x)&&x!==avoid); if(!pool.length){ const fb=aArr.filter(x=>x!==avoid); return fb.length?fb[Math.floor(Math.random()*pool.length)]:(aArr[0]||''); } return pool[Math.floor(Math.random()*pool.length)]; }
+    function makeAcronymSets(count=20){
+      const sets=[], lastByPos=Array(7).fill(null);
+      for(let s=0;s<count;s++){
+        const usedA=new Set();
+        const l0=pickOne(GROUPS.M,lastByPos[0]);
+        const l1=pickDistinctA(GROUPS.A,usedA,lastByPos[1]); usedA.add(l1);
+        const l2=pickOne(GROUPS.R,lastByPos[2]);
+        const l3=pickOne(GROUPS.I,lastByPos[3]);
+        const l4=pickDistinctA(GROUPS.A,usedA,lastByPos[4]); usedA.add(l4);
+        const l5=pickOne(GROUPS.N,lastByPos[5]);
+        const l6=pickDistinctA(GROUPS.A,usedA,lastByPos[6]);
+        const set=[l0,l1,l2,l3,l4,l5,l6];
+        for(let i=0;i<7;i++) lastByPos[i]=set[i];
+        sets.push(set);
+      }
+      return sets;
+    }
+
+    let ACRONYM_SETS=[], currentSet=0, swapBusy=false;
+    const FX_TYPES=['rise','wipe','flip'];
+
+    function buildWrapper(lines){
+      const letters=['M','A','R','I','A','N','A'];
+      const wrapper=document.createElement('div');
+      lines.forEach((txt,i)=>{
+        const row=document.createElement('div');
+        const fx=FX_TYPES[Math.floor(Math.random()*FX_TYPES.length)];
+        row.className=`row fx-${fx} in`;
+        row.dataset.fx=fx;
+        row.style.setProperty('--d','0ms');
+        const chip=document.createElement('div'); 
+        chip.className='letter anim'; 
+        chip.style.setProperty('--delay','0ms');
+        chip.textContent=letters[i]||'';
+        const span=document.createElement('div'); span.className='text'; span.textContent=txt;
+        row.appendChild(chip); row.appendChild(span); wrapper.appendChild(row);
+      });
+      return wrapper;
+    }
+
+    function renderFullAcronym(lines){
+      const full=document.getElementById('acronymFull'); if(!full) return;
+      const wrapper=buildWrapper(lines);
+
+      /* medir nova altura */
+      const meas=full.cloneNode(false);
+      meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;';
+      meas.style.width=full.clientWidth+'px';
+      meas.appendChild(wrapper.cloneNode(true));
+      full.parentNode.appendChild(meas);
+      const newH=meas.scrollHeight; meas.remove();
+
+      const currentH=full.offsetHeight || 0;
+      const targetH=Math.max(currentH, newH);
+      full.style.height=targetH+'px';
+
+      full.innerHTML='';
+      full.appendChild(wrapper);
+
+      requestAnimationFrame(()=>{ full.style.height=newH+'px'; });
+      const onEnd=e=>{ if(e.propertyName==='height'){ full.style.height='auto'; full.removeEventListener('transitionend',onEnd); } };
+      full.addEventListener('transitionend',onEnd);
+    }
+
+    function swapAcronym(lines){
+      if(swapBusy) return; swapBusy=true;
+      const full=document.getElementById('acronymFull');
+      const rows=[...full.querySelectorAll('.row')];
+
+      if(!rows.length){ renderFullAcronym(lines); swapBusy=false; return; }
+      rows.forEach((r)=>{ r.classList.remove('in'); r.classList.add('out'); r.style.setProperty('--d','0ms'); });
+      const outTotal = 360;
+
+      setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal);
+    }
+    function nextAcronym(){ currentSet=(currentSet+1)%ACRONYM_SETS.length; swapAcronym(ACRONYM_SETS[currentSet]); }
+
+    const CYCLE_MS = 4000;
+    window.addEventListener('load', ()=>{
+      const why = document.getElementById('whyBtn');
+      setInterval(()=>{ if(why) { why.classList.add('wiggle'); setTimeout(()=>why.classList.remove('wiggle'), 600); } }, 5200);
+
+      digitarSequencial();
+      setInterval(cycleEmoji, 5000);
+
+      ACRONYM_SETS=makeAcronymSets(20);
+      renderFullAcronym(ACRONYM_SETS[0]);
+
+      let timer=setInterval(nextAcronym, CYCLE_MS);
+      document.addEventListener('visibilitychange', ()=>{
+        if(document.visibilityState==='visible'){ clearInterval(timer); timer=setInterval(nextAcronym, CYCLE_MS); }
+        else { clearInterval(timer); }
+      });
+
+      setupAutoplay();
+    });
+  </script>
+</body>
+</html>
